--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -6,6 +6,7 @@
   border-color: lightgray;
   background-color: white;
   margin-bottom: 50px;
+  margin-inline: 10px;
 }
 
 .Card-photo {
